# atlas-undersea

./: .gitignore
UNDERSEA/UNDERSEA_Controller/resources/: config.properties
UNDERSEA/missions/: mission.config
moos-ivp/MOOS_V10.0.3_May1215/MOOSCore/: CMakeLists.txt  FindActiveMQcpp.cmake
moos-ivp/MOOS_V10.0.3_May1215/MOOSCore/Core/MOOSDB/: CMakeLists.txt  MOOSDBMain.cpp
moos-ivp/MOOS_V10.0.3_May1215/MOOSCore/Core/libMOOS/: CMakeLists.txt
moos-ivp/MOOS_V10.0.3_May1215/MOOSCore/Core/libMOOS/Comms/: MOOSMsg.cpp
moos-ivp/MOOS_V10.0.3_May1215/MOOSCore/Core/libMOOS/Comms/include/MOOS/libMOOS/Comms/: MOOSCommClient.h  MOOSMsg.h
moos-ivp/MOOS_V10.0.3_May1215/MOOSCore/Core/libMOOS/DB/: MOOSDB.cpp  MOOSDB_ActiveFaults.cpp  MOOSDB_MQ.cpp  MOOSDB_MQInterface.cpp
moos-ivp/MOOS_V10.0.3_May1215/MOOSCore/Core/libMOOS/DB/include/MOOS/libMOOS/DB/: ATLASLink.h  MOOSDB.h  MOOSDBVar.h  MOOSDB_ActiveFaults.h  MOOSDB_MQ.h
moos-ivp/MOOS_V10.0.3_May1215/MOOSCore/Core/libMOOS/Utils/include/MOOS/libMOOS/Utils/: CommandLineParser.h
moos-ivp/ivp/missions/jrh_test_waypoint/: hazards.txt  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_uFldHazardMgr.moos  plug_uFldNodeBroker.moos  plug_uTimerScript.moos  targ_archie.bhv  targ_archie.moos  targ_betty.bhv  targ_betty.moos  targ_charlie.bhv  targ_charlie.moos  targ_david.bhv  targ_david.moos  targ_ernie.bhv  targ_ernie.moos  targ_prey.bhv  targ_prey.moos  targ_shoreside.moos
moos-ivp/ivp/missions/jrh_test_waypoint/atlas-moosdb-comms/: atlas-faults.asd  atlas-faults.fasl  atlas-faults.lisp  msgparse.lisp  uuv.lisp
moos-ivp/ivp/missions/s1_alpha/: alpha.bhv
moos-ivp/ivp/missions/s1_test_jrh/: alpha.bhv  alpha.moos++
moos-ivp/ivp/src/: CMakeLists.txt
moos-ivp/ivp/src/atlasDBWatch/: ATLASDBWatch_App.cpp  ATLASDBWatch_App.h  ATLASLinkApp.cpp  ATLASLinkApp.h  CMakeLists.txt  main.cpp
moos-ivp/ivp/src/lib_behaviors-marine/: BHV_Loiter.cpp
